tests/use_unknown_in_catch_variables/use_unknown_in_catch_variables.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:3

Cannot cast `e` to empty because `unknown` [1] is incompatible with empty [2]. [incompatible-type]

   test.js:3:3
   3|   e as empty; // ERROR - is `unknown`
        ^

References:
   test.js:2:10
   2| } catch (e) { // OK
               ^ [1]
   test.js:3:8
   3|   e as empty; // ERROR - is `unknown`
             ^^^^^ [2]



Found 1 error
